# Surface3D

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/orcchg/surface3d/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AssetStorage.cpp  AsyncContext.cpp  EGLConfigChooser.cpp  jni_asyncContext.cpp
app/src/main/cpp/include/: AssetStorage.h  AsyncContext.h  AsyncContextError.h  DrawType.h  EGLConfigChooser.h  Event.h  EventListener.h  ListenerBinder.h  exceptions.h  jni_asyncContext.h  logger.h  macro.h
app/src/main/cpp/include/utils/: assimp_utils.h  edge.h  gesture.h  illumination.h  material.h  rgbstruct.h  texture.h  triangle.h  utils.h  vector2D.h  vector3D.h  vertex.h
app/src/main/cpp/nativeObject/: NativeObject.cpp  Scene.cpp  Signatures.cpp  Texture.cpp  jni_nativeObject.cpp
app/src/main/cpp/nativeObject/include/: NativeObject.h  Scene.h  Signatures.h  Texture.h  jni_nativeObject.h
app/src/main/cpp/utils/: assimp_utils.cpp  illumination.cpp  material.cpp  rgbstruct.cpp  triangle.cpp  utils.cpp  vertex.cpp
app/src/main/java/com/orcchg/surface3d/: AsyncContext.java  LoadMeshProgressListener.java  LoadSceneProgressListener.java  MotionStatistics.java  NativeObject.java  OnMoveTouchListener.java  OnSwipeTouchListener.java  RotationSignature.java  Scene.java  SceneInfo.java  Surface3DView.java  SwipeDirection.java  TranslationSignature.java  Utility.java  ZoomSignature.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values/: attrs.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-w820dp/: dimens.xml
app/src/test/java/com/orcchg/surface3d/: ExampleUnitTest.java
